# gh-folder-dl

./: .gitignore  LICENSE  README.md  ghget.py  pyproject.toml
src/gh_file_downloader/: __init__.py  cli.py  downloader.py
src/gh_folder_dl/: cli.py  downloader.py
