[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-folder_dl"
dynamic = ["version"]
description = "A library and CLI tool for downloading files from GitHub repository folders"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["github", "download", "cli"]
authors = [
    { name = "Dennis Traub", email = "dennis.traub@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.32.3",
    "sqlite-utils>=3.38",
]

[project.optional-dependencies]
cli = [
    "click>=8.1.8",
]

[project.urls]
Documentation = "https://github.com/username/github-file-downloader#readme"
Issues = "https://github.com/username/github-file-downloader/issues"
Source = "https://github.com/username/github-file-downloader"

[project.scripts]
ghfolder = "gh_folder_dl.cli:main"

[tool.hatch.version]
path = "src/gh_folder_dl/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_folder_dl"]
